# tradetron

./: .env.example  .gitignore  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: security.yml  test.yml
examples/: data_analysis.py  polygon_test.py  tesla_data.py
src/tradetron/data/: config.py
src/tradetron/data/models/: stock_data.py
src/tradetron/data/processors/: data_processor.py
src/tradetron/data/providers/polygon/: client.py
src/tradetron/data/storage/: data_manager.py
src/tradetron/data/storage/cache/: AAPL_20250103_20250304.json  MSFT_20250103_20250304.json  TSLA_20250103_20250304.json
tests/: conftest.py  test_data_manager.py
